tests/golden/type_errors/namespace_import_duplicate_alias.err
Type error at /home/junhe/compiler/tests/golden/type_errors/namespace_import_duplicate_alias.cd:2:43: namespace alias `lib` conflicts with an existing declaration
  import "../namespace_import_value/lib.cd" as lib;
                                            ^
